welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:8: error: '(' expected but '{' found.
    } else if {
              ^